Corrected column gap for the MatchGoalsAssist component of the fixtures module

--- a/src/modules/fixtures/components/MatchGoalsAssist/MatchGoalsAssist.module.scss
+++ b/src/modules/fixtures/components/MatchGoalsAssist/MatchGoalsAssist.module.scss
@@ -3,7 +3,7 @@
 .assists {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: fn.px-to-rem(66px);
+  column-gap: fn.px-to-rem(80px);
   padding: fn.px-to-rem(5px);
 }
 
